--- a/lab.tex
+++ b/lab.tex
@@ -3,9 +3,7 @@
 \usepackage[nolineno,norules]{lgrind}
 \begin{document}
 \normalpage{Specification}{%
-This lab explores use of APIs to get a if matching the ueser's keyboard
-entered in a GUI textbox. 
-Our GUI will allow users to search for gifs with a keyword.
+This API outputs a person’s Body Mass Index after they enter their height and weight. It also tells them whether they are underweight or overweight and about potential risks they could face. Depending on the output, the GUI will output a helpful infographic with exercise and diet tips.
 }
 \normalpage{Analysis}{%
 We will use the mashape marketplace to query for a gif matching the keyword.
